# music-flavor-analysis

./: .gitignore  LICENSE  README.md  _quarto.yml  index.qmd  music-flavor-analysis.html  music-flavor-analysis.qmd  pyproject.toml  references.bib
.github/workflows/: check-quarto.yml
data/: data.csv  target_vectors.xlsx
notebooks/: 01-cross-modal-analysis.qmd  02-taste-vectors.qmd  03-power-analysis.qmd  04-perceptual-experiment.qmd
scripts/: power_analysis.R
stimuli/: stimuli-metadata.xlsx
