[project]
name = "music-flavor-analysis"
version = "1.0.0"
description = "Companion code for: Multimodal Dataset Normalization and Perceptual Validation for Music-Taste Correspondences"
authors = [
    {name = "Matteo Spanio", email = "spanio@dei.unipd.it"},
    {name = "Valentina Frezzato"},
    {name = "Antonio Roda"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "umap-learn>=0.5.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
